--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
             <h2 class="titulo-principal">Gerador de Senhas</h2>
             <h3 class="titulo-secundario">Gere instantaneamente uma senha aleatória e segura</h3>
         </div>
+
+        <Div class="conteudo-senha">
+            <label for="senha">Senha</label>
+            <input name="Senha" type="text" id="campo-senha">
+        </Div>
+        
     </section>
 
 </body>
