--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
         <div class="parametro">
             <h3 class="parametro-titulo">Peronalize a sua Senha</h3>
             <div class="parametro-coluna__senha">
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+                </div>
 
-                
             </div>
         </div>
 
