--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
                 </div>
 
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Característica da senha</h4>
+                </div>
+
+                <div class="parametro-senha">
+                    <h4 class="parametro-senha__titulo">Força da senha</h4>
+                </div>
+
+
             </div>
         </div>
 
