--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
+                    <div class="parametro-senha-botoes"><
+                        button class="parametro-senha__botao"
+                    /div>
                 </div>
 
                 <div class="parametro-senha">
@@ -41,10 +44,6 @@
 
             </div>
         </div>
-
-
-
-
 
     </section>
 
