--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
 
                 <div class="parametro-senha">
                     <h4 class="parametro-senha__titulo">Número de caracteres</h4>
-                    <div class="parametro-senha-botoes"><
-                        button class="parametro-senha__botao"
-                    /div>
+                    <div class="parametro-senha-botoes">
+                        <button class="parametro-senha__botao">-</button>
+                        <p class="parametro-senha__botao">12</p>
+                        <button class="parametro-senha__botao">+</button>
+                    </div>
                 </div>
 
                 <div class="parametro-senha">
